--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.2",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
