--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@userfront/react": "^2.0.0",
+    "ag-grid-community": "^33.0.2",
+    "ag-grid-react": "^33.0.2",
     "axios": "^1.7.7",
+    "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
